--- a/public/html/chatPage.html
+++ b/public/html/chatPage.html
@@ -158,7 +158,7 @@
             $(".navbar-brand").text(`${recieverName}`)
             $.ajax({
                     method: "GET",
-                    url: `http://localhost:3000/messagesSent?chatId=${chatId}`
+                    url: `https://tokyochatappdb.herokuapp.com/messagesSent?chatId=${chatId}`
                 })
                 .done(function (result) {
                     result.forEach(element => {
@@ -205,7 +205,7 @@
 
             $.ajax({
                 method: 'POST',
-                url: 'http://localhost:3000/messagesSent',
+                url: 'https://tokyochatappdb.herokuapp.com/messagesSent',
                 data: msgData
             })
             popMsg();
