--- a/public/html/ChatRoom.html
+++ b/public/html/ChatRoom.html
@@ -240,8 +240,8 @@
                     url: 'https://tokyochatappdb.herokuapp.com/chatroomMembers',
                     data: memData
                 })
-
-                console.log(d.id)
+                popMemList();
+                checkAdmin()
             })
 
         })
