--- a/public/html/editProfile.html
+++ b/public/html/editProfile.html
@@ -26,10 +26,11 @@
             </div>
 
         </div>
-        <nav class="navbar navbar-expand-lg navbar-light ">
+        <nav class="navbar navbar-expand-lg navbar-light">
             <a class="navbar-brand" href="#" id="link">Profile Settings</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"
+                data-trigger="focus">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -160,6 +161,22 @@
             </div>
         </div>
     </div>
+    <div class="modal fade profileModal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h6 class="modal-title">Confirmation Message</h6>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p class="regMsg">Successful!!!</p>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
@@ -173,23 +190,31 @@
     <script>
         // let userDetails = JSON.parse(localStorage.getItem("userData"));
         let userDetails = JSON.parse(localStorage.getItem("userData"));
-        $(document).ready(
-
-            function getUserDetails() {
-                $('#password').val(`${userDetails.password}`);
-                $('#password2').val(`${userDetails.password}`);
-                $('#textarea').val(`${userDetails.description}`);
-                $('#city option:selected').text(`${userDetails.city}`);
-                $('#state option:selected').text(`${userDetails.state}`);
-                $('#age').val(`${userDetails.age}`);
-                $('#email').val(`${userDetails.email}`);
-                $('#phone').val(`${userDetails.phone}`);
-                $('#firstname').val(`${userDetails.firstname}`);
-                $('#lastname').val(`${userDetails.lastname}`);
-                $('[data-toggle="tooltip"]').tooltip()
-                $('.alert').alert('close')
+        $(document).ready(function () {
+                getUserDetails()
             }
+
+
         )
+
+        function getUserDetails() {
+            $('#password').val(`${userDetails.password}`);
+            $('#password2').val(`${userDetails.password}`);
+            $('#textarea').val(`${userDetails.description}`);
+            $('#city option:selected').text(`${userDetails.city}`);
+            $('#state option:selected').text(`${userDetails.state}`);
+            $('#age').val(`${userDetails.age}`);
+            $('#email').val(`${userDetails.email}`);
+            $('#phone').val(`${userDetails.phone}`);
+            $('#firstname').val(`${userDetails.firstname}`);
+            $('#lastname').val(`${userDetails.lastname}`);
+            $('[data-toggle="tooltip"]').tooltip()
+
+
+        }
+
+
+
         $("#file").change(function () {
             let r = new FileReader();
             r.onload = function (e) {
@@ -299,7 +324,7 @@
                             })
                             .done(function (result) {
                                 localStorage.setItem('userData', JSON.stringify(result));
-
+                                $(".profileModal").modal('show')
                             })
                     })
                 return false;
