--- a/public/html/ChatRoomList.html
+++ b/public/html/ChatRoomList.html
@@ -95,7 +95,7 @@
                 <ul class="list-group list-group-flush" id="roomList">
 
                 </ul>
-                <button class="btn btn-info btn-block">Create a new chatroom +</button>
+                <button class="btn btn-info btn-block">New chatroom +</button>
             </div>
         </section>
 
