--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,10 @@
             <div id="login" style="display: none;">
                 <div class="cardTitle">
                     <h3>User Login</h3>
-
+                    <div class="d-flex align-items-center spinner" style="display: none;">
+                        <strong>Loading...</strong>
+                        <div class="spinner-border ml-auto" role="status" aria-hidden="true"></div>
+                    </div>
                 </div>
                 <p id="invalid" style="display: none;">Invalid email or password <span
                         class="invalidClose">&times;</span></p>
@@ -193,7 +196,22 @@
             </div>
         </section>
 
-
+        <div class="modal fade registerModal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog modal-sm">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h6 class="modal-title">Confirmation Message</h6>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <p class="regMsg">You have successfully registered !!!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </main>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
@@ -206,6 +224,7 @@
     <script>
         $(document).ready(function () {
             localStorage.clear();
+
         })
 
 
@@ -218,15 +237,29 @@
             e.preventDefault()
             toggleReg()
         })
+        $(".spinner").removeClass("d-flex");
+        $(".spinner").hide()
+
+        function showSpinner() {
+            $(".spinner").addClass("d-flex");
+            $(".spinner").show()
+            setTimeout(() => {
+                $(".spinner").removeClass("d-flex");
+                $(".spinner").hide()
+            }, 5000);
+        }
 
         $("#userLogin").submit(e => {
             e.preventDefault();
             let email = $("#inputEmail").val();
             let password = $("#inputPassword").val();
+            showSpinner();
             $.ajax({
                 method: 'GET',
                 url: `https://tokyochatappdb.herokuapp.com/users?email=${email}&password=${password}`,
             }).done(function (data) {
+                $(".spinner").removeClass("d-flex");
+                $(".spinner").hide()
                 if (data.length) {
                     let formatted = data[0]
                     localStorage.setItem('userData', JSON.stringify(formatted));
@@ -242,7 +275,7 @@
             // e.preventDefault()
             $('#login').css('display', 'none')
             $("#register").css('display', 'block')
-
+            $("#guide").show()
         }
 
 
@@ -251,6 +284,7 @@
 
         function toggleLog() {
             // e.preventDefault()
+            $("#guide").hide()
             $("#register").css('display', 'none')
             $('#login').css('display', 'block')
         }
