deployment getting better

--- a/public/html/FriendRequest.html
+++ b/public/html/FriendRequest.html
@@ -266,6 +266,7 @@
             }
             post(friendData);
             showAlert();
+            document.getElementById("requestList").innerHTML = '';
             getRequests()
         }
 
