--- a/public/html/ChatRoomList.html
+++ b/public/html/ChatRoomList.html
@@ -89,7 +89,10 @@
         </section>
         <section class="card new">
 
-
+            <div class="d-flex align-items-center spinner">
+                <strong>Loading...</strong>
+                <div class="spinner-border ml-auto" role="status" aria-hidden="true"></div>
+            </div>
 
             <div class="friends-container">
                 <ul class="list-group list-group-flush" id="roomList">
