deployment getting better, almost done

--- a/public/html/chatPage.html
+++ b/public/html/chatPage.html
@@ -125,7 +125,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <p>Are sure you want to logout</p>
+                    <p>Are sure you want to <strong>Logout</strong></p>
                 </div>
                 <div class="modal-footer">
 
