--- a/public/html/addFriends.html
+++ b/public/html/addFriends.html
@@ -148,7 +148,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <p>Are sure you want to logout</p>
+                    <p>Are sure you want to <strong>Logout</strong></p>
                 </div>
                 <div class="modal-footer">
 
