--- a/public/html/friends.html
+++ b/public/html/friends.html
@@ -154,7 +154,9 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <p>Are sure you want to logout</p>
+
+                    <p>Are sure you want to <strong>Logout</strong></p>
+
                 </div>
                 <div class="modal-footer">
 
