--- a/public/html/userPage.html
+++ b/public/html/userPage.html
@@ -113,7 +113,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <p>Are sure you want to logout</p>
+                    <p>Are sure you want to <strong>Logout</strong></p>
                 </div>
                 <div class="modal-footer">
 
